[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menu/ResumeLevel.gd" type="Script" id=3]
[ext_resource path="res://assets/menu/RestartLevel.gd" type="Script" id=4]
[ext_resource path="res://assets/menu/ExitLevel.gd" type="Script" id=5]
[ext_resource path="res://assets/menu/menu_select.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 556.0
custom_constants/separation = 30

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 80 )
custom_constants/margin_right = 0
custom_constants/margin_top = 100
custom_constants/margin_bottom = 0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_top = 100.0
margin_right = 984.0
margin_bottom = 186.0
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 0
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "PAUSED!"
align = 1

[node name="ButtonContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 984.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 200 )

[node name="VButtonArray" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ButtonContainer"]
margin_left = 418.0
margin_top = 45.0
margin_right = 565.0
margin_bottom = 155.0
custom_constants/separation = 7

[node name="ResumeLevel" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray"]
margin_right = 147.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
script = ExtResource( 3 )

[node name="RestartLevel" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray"]
margin_top = 39.0
margin_right = 147.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
text = "Restart level"
script = ExtResource( 4 )

[node name="ExitLevel" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray"]
margin_top = 78.0
margin_right = 147.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
text = "Exit level"
script = ExtResource( 5 )

[node name="sound_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray/ResumeLevel" to="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray/ResumeLevel" method="_on_ResumeLevel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray/RestartLevel" to="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray/RestartLevel" method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray/ExitLevel" to="MarginContainer/VBoxContainer/ButtonContainer/VButtonArray/ExitLevel" method="_on_ExitLevel_pressed"]
